tests/mediawiki/fail/1.22.x/includes/DefaultSettings.php
$wgVersion = '1.22.13';
